--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,12 @@ body {
   justify-content: space-between;
 }
 
+#responsive-footer-nav {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
 .transition{
   width: 50%;
   display: flex;
@@ -47,6 +53,24 @@ body {
   justify-content: center;
   font-size: calc(10px + 2vmin);
 }
+
+.carousel {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0px;
+  margin: 0px;
+}
+
+.carousel-control-prev-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='gray' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
+ }
+ 
+ .carousel-control-next-icon {
+   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='gray' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
+ }
 
 .Center-item {
   height: 80vh;
