nav buttons and project text

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,8 +1,8 @@
 // overwrite theme variables
 
-$primary: #708090;
+$primary: black;
 $secondary: #66ab57;
-$dark: #708090;
+$dark: #9ab6da;
 $light: #f2efee;
 $success: #66ab57;
 $info: #9ab6da;
